--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-markdown": "^10.1.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
