--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
+    "dom-to-image": "^2.6.0",
     "framer-motion": "^12.12.2",
     "html2pdf.js": "^0.10.3",
+    "jspdf": "^3.0.1",
     "motion": "^12.12.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
